adding dependency injection

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+
     }
 }
 
