--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$version_kotlin"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.21"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
