--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 
 android {
+    kotlinOptions{
+        freeCompilerArgs += [
+                "-Xjvm-default=all",
+        ]
+    }
     compileSdk 32
 
     defaultConfig {
@@ -44,7 +49,11 @@ android {
 
 
 dependencies {
-
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach{
+        kotlinOptions{
+            freeCompilerArgs +=["-Xjvm-default=all",]
+        }
+    }
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
