--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,8 @@ dependencies {
 
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.room:room-ktx:2.4.3"
+
 }
