assisted inject savedstatehandler

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,5 +121,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation("androidx.savedstate:savedstate-ktx:1.2.0")
 
 }
